Fix some inconsistent elements for dark mode

--- a/src-ui/src/theme_dark.scss
+++ b/src-ui/src/theme_dark.scss
@@ -174,6 +174,17 @@ $border-color-dark-mode: #47494f;
     color: $text-color-dark-mode;
     border-color: $border-color-dark-mode;
 
+    .des,
+    .asc {
+      background-color: transparent !important;
+      color: $text-color-dark-mode;
+      border-color: $border-color-dark-mode;
+
+      &::after {
+        filter: invert(0.8); /* arrow is a black inline png bkgd image (!) so use filter */
+      }
+    }
+
     tr:hover {
       background-color: $bg-light-dark-mode;
       color: $text-color-dark-mode-accent;
@@ -250,13 +261,18 @@ $border-color-dark-mode: #47494f;
     background-color: $bg-dark-mode !important;
   }
 
-  .form-control,
+  .form-control:not(.is-invalid):not(.btn),
+  input:not(.is-invalid),
+  textarea:not(.is-invalid) {
+    border-color: $border-color-dark-mode; /* we dont want to override controls that get highlighting for errors */
+  }
+
+  .form-control:not(.btn),
   input,
   select,
   textarea {
     background-color: $bg-dark-mode;
     color: $text-color-dark-mode;
-    border-color: $border-color-dark-mode;
 
     &::placeholder {
       color: $text-color-dark-mode;
@@ -324,6 +340,12 @@ $border-color-dark-mode: #47494f;
 
   .progress {
     background-color: $border-color-dark-mode;
+  }
+
+  .alert-danger {
+    color: $text-color-dark-mode-accent;
+    background-color: darken($danger-dark-mode, 20%);
+    border-color: darken($danger-dark-mode, 20%);
   }
 }
 
